--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja de Carros do João</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Loja de Carros do Pedro</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
 
-        <Div class="content">
+    <div class="content">
 
-            <nav>
-                <p class="brand"><strong>Loja de Carros</strong> do João</p>
-                <ul>
-                    <li><a href="#catalog">Catálogo</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#feature">Recursos</a></li>
-                    <button>Login</button>
-                </ul>
-            </nav>
-            <div class="header-block">
-                <div class="text">
-                    <h2>O carro perfeito para você.</h2>
-                    <p>
-                        Os modelos mais sonhados pelos consumidores estão aqui. Aproveite nosso mês premiado.
-                    </p>
-                </div>
-                <img src="/images/car-header.png" alt="Carro">
+        <nav>
+            <p class="brand"><strong>Loja de Carros</strong> do Pedro</p>
+            <ul>
+                <li><a href="#catalog">Catálogo</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#feature">Recursos</a></li>
+                <button>Login</button>
+            </ul>
+        </nav>
+        <div class="header-block">
+            <div class="text">
+                <h2>O carro perfeito para você.</h2>
+                <p>
+                    Os modelos mais sonhados pelos consumidores estão aqui. Aproveite nosso mês premiado.
+                </p>
             </div>
-        </Div>
+            <img src="images/car-header.png" alt="Carro">
+        </div>
+    </div>        
 
     </header>
     <section class="catalog" id="catalog">
@@ -40,51 +39,75 @@
                 <h3>Catálogo</h3>
             </div>
             <div class="filter-card">
-                <input
+                <input 
                 type="text"
                 class="search-input"
                 placeholder="Escolha seu modelo favorito:"
             />
-            <button class="search-button">Buscar</button>
+            <button class="search-button">Buscar:</button>
         </div>
         <div class="card-wrapper">
             <div class="card-item">
-                <img src="/images/car-card.png" alt="Carro">
+                <img src="images/car-card.png" alt="Carro">
                 <div class="card-content">
                     <h3>Audi Supra TT</h3>
                     <p>Um super motor, com design esportivo e pintura especial</p>
                     <button type="button">Eu quero este!</button>
                 </div>
-            </div> 
+            </div>
             <div class="card-item">
-                <img src="/images/car-card.png" alt="Carro">
+                <img src="images/car-card-ferrari.png" alt="Carro">
                 <div class="card-content">
-                    <h3>Audi Supra TT</h3>
+                    <h3>Ferrari F-355</h3>
                     <p>Um super motor, com design esportivo e pintura especial</p>
                     <button type="button">Eu quero este!</button>
                 </div>
-            </div> 
+            </div>
             <div class="card-item">
-                <img src="/images/car-card.png" alt="Carro">
+                <img src="images/car-card-porshe.png" alt="Carro">
+                <div class="card-content">
+                    <h3>Porsche 911 Carrera</h3>
+                    <p>Um super motor, com design esportivo e pintura especial</p>
+                    <button type="button">Eu quero este!</button>
+                </div>
+            </div><div class="card-item">
+                <img src="images/car-card.png" alt="Carro">
                 <div class="card-content">
                     <h3>Audi Supra TT</h3>
                     <p>Um super motor, com design esportivo e pintura especial</p>
                     <button type="button">Eu quero este!</button>
                 </div>
             </div><div class="card-item">
-                <img src="/images/car-card.png" alt="Carro">
+                <img src="images/car-card.png" alt="Carro">
                 <div class="card-content">
                     <h3>Audi Supra TT</h3>
                     <p>Um super motor, com design esportivo e pintura especial</p>
                     <button type="button">Eu quero este!</button>
-                </div><div class="card-item">
-                    <img src="/images/car-card.png" alt="Carro">
-                    <div class="card-content">
-                        <h3>Audi Supra TT</h3>
-                        <p>Um super motor, com design esportivo e pintura especial</p>
-                        <button type="button">Eu quero este!</button>
-                    </div><div class="card-item">
-                <img src="/images/car-card.png" alt="Carro">
+                </div>
+            </div><div class="card-item">
+                <img src="images/car-card.png" alt="Carro">
+                <div class="card-content">
+                    <h3>Audi Supra TT</h3>
+                    <p>Um super motor, com design esportivo e pintura especial</p>
+                    <button type="button">Eu quero este!</button>
+                </div>
+            </div><div class="card-item">
+                <img src="images/car-card.png" alt="Carro">
+                <div class="card-content">
+                    <h3>Audi Supra TT</h3>
+                    <p>Um super motor, com design esportivo e pintura especial</p>
+                    <button type="button">Eu quero este!</button>
+                </div>
+            </div><div class="card-item">
+                <img src="images/car-card.png" alt="Carro">
+                <div class="card-content">
+                    <h3>Audi Supra TT</h3>
+                    <p>Um super motor, com design esportivo e pintura especial</p>
+                    <button type="button">Eu quero este!</button>
+                </div>
+            </div>
+            <div class="card-item">
+                <img src="images/car-card.png" alt="Carro">
                 <div class="card-content">
                     <h3>Audi Supra TT</h3>
                     <p>Um super motor, com design esportivo e pintura especial</p>
@@ -93,24 +116,112 @@
             </div>
         </div>
     </section>
+
     <section class="about" id="about">
         <div class="content">
             <div class="title-wrapper-about">
-                <P>Saiba quem somos</P>
-                <h3>SOBRE:</h3>
+                <p>Saiba quem somos</p>
+                <h3>Sobre:</h3>
             </div>
             <div class="about-content">
                 <div class="left">
-                    <img src="/images/about.png" alt="Sobre">
+                    <img src="images/about.png" alt="Sobre">
                 </div>
                 <div class="right">
-                    <h3>Siga  com a tecnologia e a mobiidade</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores amet ad cum sint? Iste quo earum doloremque mollitia, id consequuntur totam aspernatur odit deserunt pariatur est dolore illum natus veniam! Delectus totam voluptatem, blanditiis veniam ipsam aliquid labore corrupti perferendis placeat sapiente, temporibus repellat non, laudantium minima mollitia itaque ipsa! Ratione consectetur aspernatur ipsam veniam eaque consequuntur maxime minus, hic expedita voluptatem voluptate blanditiis deserunt nesciunt maiores? Quidem, cupiditate officiis? Fugit inventore delectus iusto facilis blanditiis pariatur quis cupiditate doloremque itaque illo sed reprehenderit officia tenetur laboriosam porro eos impedit vel recusandae, optio quisquam minima, nulla facere voluptate odit? Omnis.
-                    </p>
+                    <h3>Siga com a tecnologia e a mobilidade</h3>
+                    <P>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni recusandae, maiores beatae adipisci nesciunt architecto exercitationem voluptate? Ratione nisi ea, illo atque consequatur labore debitis id. Illo, ipsam eos quidem repellat eveniet voluptatum velit molestiae reiciendis facilis doloribus ullam quos esse, ea, quam debitis! Obcaecati saepe omnis voluptatum! Minima iste deserunt sunt dicta eligendi nesciunt, voluptates modi vel alias quidem rem labore cupiditate aliquid eaque tenetur repudiandae similique nihil eos! Maiores iure voluptate explicabo accusamus, quos voluptas nemo nobis tenetur dolorum totam quae recusandae laborum laudantium harum deleniti impedit veritatis alias eaque! Deleniti, beatae? Dignissimos aliquid consequuntur dolorum eum quaerat.
+                    </P>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="features" id="features">
+        <div class="content">
+            <div class="title-wrapper-features">
+                <p>O que você pode fazer</p>
+                <h3>Recursos</h3>
+            </div>
+            <div class="feature-card-block">
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+                    <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="Recursos">
+                    <div class="feature-text-content">
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, odio.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="main">
+            <div class="content footer-links">
+                <div class="footer-company">
+                    <h4>A empresa</h4>
+                    <h6>Sobre</h6>
+                    <h6>Contato</h6>
+                </div>
+                <div class="footer-rental">
+                    <h4>Alugue</h4>
+                    <h6>Antecipe</h6>
+                    <h6>Como alugar?</h6>
+                    <h6>Ajuda</h6>
+                </div>
+                <div class="footer-social">
+                    <h4>Nossas Redes Sociais</h4>
+                    <div class="social-icons">
+                        <img src="images/instagram.png" alt="Instagram" />
+                        <img src="images/facebook.png" alt="Facebook" />
+                    </div>
+                </div>
+                <div class="footer-contact">
+                    <h4>Fale Conosco</h4>
+                    <h6>+55 16 99999 - 9999</h6>
+                    <h6>contato@lojadopedro.com.br</h6>
+                    <h6>Nome da Rua, 99 - Sua Cidade - UF</h6>
+                </div>
+            </div>
+        </div>
+        <div class="last">
+            Pedro Pena 2024 - Todos os direitos reservados.
+        </div>
+    </footer>
 </body>
 </html>
