--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja de Carros do Pedro</title>
+    <title>Loja de Carros do João</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="content">
 
         <nav>
-            <p class="brand"><strong>Loja de Carros</strong> do Pedro</p>
+            <p class="brand"><strong>Loja de Carros</strong> do João</p>
             <ul>
                 <li><a href="#catalog">Catálogo</a></li>
                 <li><a href="#about">Sobre</a></li>
@@ -214,13 +214,13 @@
                 <div class="footer-contact">
                     <h4>Fale Conosco</h4>
                     <h6>+55 16 99999 - 9999</h6>
-                    <h6>contato@lojadopedro.com.br</h6>
+                    <h6>contato@lojadojoao.com.br</h6>
                     <h6>Nome da Rua, 99 - Sua Cidade - UF</h6>
                 </div>
             </div>
         </div>
         <div class="last">
-            Pedro Pena 2024 - Todos os direitos reservados.
+            João Almeida 2024 - Todos os direitos reservados.
         </div>
     </footer>
 </body>
